# wfb-link

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile
configs/: long-range-tailnet-field.env.example  radio-run-long-range-field.toml  radio-run-multi-stream-example.toml  radio-run-robust-short-range.toml  radio-run-video-control-tdd.toml
crates/wfb-android-smoke/: Cargo.toml
crates/wfb-android-smoke/src/: lib.rs
crates/wfb-radio-runtime/: Cargo.toml
crates/wfb-radio-runtime/src/: led_heartbeat.rs  lib.rs  tx_power.rs
crates/wfb-tun/: Cargo.toml
crates/wfb-tun/src/: lib.rs
docs/: android-consumer-quickstart.md  android-production-preflight.md  android-sdk.md  android-usbhost.md  bb-smoke.md  bench-plan.md  cross-platform-link-interface.md  efuse-dump.md  firmware-smoke.md  init-dry-run.md  init-live.md  led-smoke.md  llt-smoke.md  long-range-tailnet-field-test.md  mac-smoke.md  macos-usbhost.md  power-on-smoke.md  product-integration.md  queue-dma-smoke.md  register-smoke.md  research-notes.md  rf-quality-and-range.md  rf-quality-baseline.md  rf-quality-field-checklist.md  rf-quality-field-notes-template.md  rf-quality-range-profiles.md  rf-smoke.md  rtl8812au-calibration-state.md  rtl8812au-efuse-tx-power.md  rtl8812au-init-audit.md  rtl8812au-port-checklist.md  runtime-boundary.md  rx-scan.md  service-config-reference.md  third-party.md  tx-once.md  tx-repeat.md  usb-trace-format.md  wfb-ng-tunnel-recovery.md
openspec/: project.md
scripts/: build-android-sdk-aar.sh  build-android-sdk-consumer-smoke.sh  build-android-sdk-gradle-consumer-smoke.sh  build-android-smoke-apk.sh  build-android-smoke.sh  build-wfb-ng-android-codec.sh  build-wfb-ng-macos-codec.sh  capture-linux-baseline.sh  install-android-smoke-apk.sh  prepare-long-range-tailnet-field.sh  run-android-managed-soak.sh  run-calibration-regression-matrix.sh  run-mac-wf-tun-profile-matrix.sh  run-mac-wf-tun-recovery.sh  run-production-radio-smoke.sh  run-radio-run-duplex-smoke.sh  (+8 more)
(+344 files in other folders)
