[workspace]
resolver = "2"
members = [
    "crates/radio-core",
    "crates/wfb-bridge",
    "crates/wfb-radio-diag",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.6"
cc = "1.2"
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
radio-core = { path = "crates/radio-core" }
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wfb-bridge = { path = "crates/wfb-bridge" }
