[package]
name = "wfb-android-smoke"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radio-core.workspace = true
serde_json.workspace = true
wfb-bridge.workspace = true
wfb-radio-runtime.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
