[package]
name = "wfb-radio-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true
radio-core.workspace = true
serde.workspace = true
serde_json.workspace = true
wfb-bridge.workspace = true

[build-dependencies]
cc.workspace = true
