[package]
name = "wfb-tun"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "wfb-tun-macos"
path = "src/bin/wfb-tun-macos.rs"

